# fastgen

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
.github/: CONTRIBUTING.md
fastgen/: cache.py  forward.py  generate.py  model.py
fastgen/kernels/: __init__.py  paged_memcpy.py  rmsnorm.py  rope.py
fastgen/tools/: chat.py  serve.py
fastgen/utils/: iset.py  loading.py  misc.py  sampling.py  tokenizer.py  tune.py  weights.py
scripts/: attn_overhead.py  bench.py  paged_memcpy.py  rmsnorm.py  rope.py  rope_test.py
scripts/data/: mistral7-fastgen.json  mistral7-vllm.json
